kubernetes/apidb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apidb-deployment
  labels:
    app: apidb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apidb
  template:
    metadata:
      labels:
        app: apidb
    spec:
      containers:
      - name: apidb
        image: fanomezana10/fano_api_db:v1.0
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: apidb-service
spec:
  selector:
    app: apidb
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
